--- a/_posts/2020-10-31-plotting-covid-19-pandemic/plotting-covid-19-pandemic.Rmd
+++ b/_posts/2020-10-31-plotting-covid-19-pandemic/plotting-covid-19-pandemic.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Plotting Covid-19 Pandemic"
 description: |
-  A short description of the post.
+  Interactive plot of Covid-19 cases
 author:
   - name: Ashwin Malshe
     url: www.ashwinmalshe.com
